--- a/index.html
+++ b/index.html
@@ -570,83 +570,101 @@
         }
 
         // --- Render Single Request Card (Full Detail) ---
-        // --- Render Single Request Card (Full Detail) ---
-        // [MODIFIED] Added logic to disable buttons based on status and time
+         // --- [MODIFIED] Render Single Request Card (Full Detail) ---
+        // --- បានកែសម្រួល Logic សម្រាប់ប៊ូតុង Delete, Approve, Reject ---
         function renderRequestCard(request) {
             if (!request || !request.id) return '';
             
-            // --- [MODIFIED] Delete Button Logic ---
-            let deleteButton = '';
-            let deleteDisabled = false;
-            let deleteTooltip = '';
-            const minutesAllowed = 55; // [NEW] Time limit constant
+            let deleteButtonHtml = '';
+            let actionButtonsHtml = '';
 
-            // Rule 1: Disable delete if status is 'editing' (on any page)
-            if (request.status === 'editing') {
-                deleteDisabled = true;
-                deleteTooltip = 'title="មិនអាចលុបពេលកំពុងកែ"';
-            }
-            
-            // Rule 2: Disable delete if status is decided and time limit passed
-            else if (request.status === 'approved' || request.status === 'rejected') {
-                const decisionTime = request.decisionAt?.toDate();
-                if (decisionTime) {
-                    const now = new Date();
-                    const diffMs = now.getTime() - decisionTime.getTime();
-                    const diffMinutes = diffMs / (1000 * 60);
-                    
-                    if (diffMinutes > minutesAllowed) {
-                        deleteDisabled = true;
-                        deleteTooltip = `title="មិនអាចលុបបានទេ ព្រោះបានសម្រេចចិត្តលើស ${minutesAllowed} នាទីហើយ"`;
-                    }
-                } else {
-                    // Has a decided status but no timestamp (e.g., old data). Disable to be safe.
-                    deleteDisabled = true;
-                    deleteTooltip = 'title="មិនអាចលុបបានទេ (ខ្វះទិន្នន័យ)"';
-                }
-            }
+            // --- កំណត់ Button សម្រាប់ប្រើប្រាស់ ---
 
-            deleteButton = `
-                <button data-id="${request.id}" data-type="${request.type}" data-action="delete" 
-                        class="action-btn text-gray-400 hover:text-red-600 dark:text-gray-500 dark:hover:text-red-500 transition-colors duration-150 p-1 rounded-full ${deleteDisabled ? 'opacity-50 cursor-not-allowed' : ''}" 
-                        ${deleteDisabled ? 'disabled' : ''} ${deleteTooltip}>
+            // ប៊ូតុងលុប (Active)
+            const activeDeleteButton = `
+                <button data-id="${request.id}" data-type="${request.type}" data-action="delete" class="action-btn text-gray-400 hover:text-red-600 dark:text-gray-500 dark:hover:text-red-500 transition-colors duration-150 p-1 rounded-full" title="លុបសំណើនេះ">
                     <i class="fas fa-trash-alt fa-fw"></i>
                 </button>
             `;
-            // --- End Delete Button Logic ---
+            
+            // ប៊ូតុងលុប (Disabled)
+            const disabledDeleteButton = (title) => `
+                <button class="action-btn text-gray-300 dark:text-gray-600 cursor-not-allowed p-1 rounded-full" title="${title}">
+                    <i class="fas fa-trash-alt fa-fw"></i>
+                </button>
+            `;
+            
+            // ប៊ូតុង Approve/Reject (Active)
+            const activeActionButtons = `
+                <div class="flex flex-col sm:flex-row gap-2 mt-4 pt-3 border-t border-primary">
+                    <button data-id="${request.id}" data-type="${request.type}" data-action="approve" class="flex-1 action-btn bg-green-500 hover:bg-green-600 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm transition duration-150 ease-in-out flex items-center justify-center gap-1.5">
+                        <i class="fas fa-check fa-fw"></i> អនុម័ត
+                    </button>
+                    <button data-id="${request.id}" data-type="${request.type}" data-action="reject" class="flex-1 action-btn bg-red-500 hover:bg-red-600 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm transition duration-150 ease-in-out flex items-center justify-center gap-1.5">
+                        <i class="fas fa-times fa-fw"></i> បដិសេធ
+                    </button>
+                </div>`;
+                
+            // ប៊ូតុង Approve/Reject (Disabled សម្រាប់ 'editing')
+            const disabledActionButtons = (message) => `
+                <div class="flex flex-col sm:flex-row gap-2 mt-4 pt-3 border-t border-primary">
+                    <button disabled class="flex-1 action-btn bg-gray-400 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm cursor-not-allowed flex items-center justify-center gap-1.5 opacity-70">
+                        <i class="fas fa-ban fa-fw"></i> ${message}
+                    </button>
+                    <button disabled class="flex-1 action-btn bg-gray-400 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm cursor-not-allowed flex items-center justify-center gap-1.5 opacity-70">
+                        <i class="fas fa-ban fa-fw"></i> ${message}
+                    </button>
+                </div>`;
 
-
-            let actionButtons = '';
+            // --- ត្រួតពិនិត្យ Logic តាម Status របស់សំណើ ---
             switch (request.status) {
                 case 'pending':
+                    // លក្ខខណ្ឌទី១ (Page រង់ចាំ): Status 'pending' អាច Approve, Reject, និង Delete
+                    actionButtonsHtml = activeActionButtons;
+                    deleteButtonHtml = activeDeleteButton;
+                    break;
+                    
                 case 'editing':
-                    // --- [MODIFIED] Approve/Reject Button Logic ---
-                    // Rule: Disable approve/reject if status is 'editing'
-                    const isDisabled = request.status === 'editing';
-                    const disabledClass = isDisabled ? 'opacity-50 cursor-not-allowed' : 'hover:bg-green-600';
-                    const disabledClassReject = isDisabled ? 'opacity-50 cursor-not-allowed' : 'hover:bg-red-600';
-                    const disabledAttr = isDisabled ? 'disabled' : '';
-                    const tooltip = isDisabled ? 'title="មិនអាច អនុម័ត/បដិសេធ សំណើដែល \'កំពុងកែ\' បានទេ"' : '';
+                    // លក្ខខណ្ឌទី១ (Page រង់ចាំ): Status 'editing' មិនអាច Approve, Reject, ឬ Delete
+                    actionButtonsHtml = disabledActionButtons('កំពុងកែ');
+                    deleteButtonHtml = disabledDeleteButton('មិនអាចលុបពេលកំពុងកែ');
+                    break;
 
-                    actionButtons = `
-                        <div class="flex flex-col sm:flex-row gap-2 mt-4 pt-3 border-t border-primary" ${tooltip}>
-                            <button data-id="${request.id}" data-type="${request.type}" data-action="approve" class="flex-1 action-btn bg-green-500 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm transition duration-150 ease-in-out flex items-center justify-center gap-1.5 ${disabledClass}" ${disabledAttr}>
-                                <i class="fas fa-check fa-fw"></i> អនុម័ត
-                            </button>
-                            <button data-id="${request.id}" data-type="${request.type}" data-action="reject" class="flex-1 action-btn bg-red-500 text-white text-sm font-semibold py-2 px-4 rounded-lg shadow-sm transition duration-150 ease-in-out flex items-center justify-center gap-1.5 ${disabledClassReject}" ${disabledAttr}>
-                              <i class="fas fa-times fa-fw"></i> បដិសេធ
-                            </button>
-                        </div>`;
+                case 'approved':
+                case 'rejected':
+                    // លក្ខខណ្ឌទី២ (Page ផ្សេងៗ): អាចលុបបានតែក្នុងរយៈពេល 55 នាទី ក្រោយពេលตัดสินใจ
+                    const decisionTime = request.decisionAt?.toDate(); // បម្លែង Firestore Timestamp ទៅ Date
+                    const now = new Date();
+                    let canDelete = false;
+                    let reason = 'មិនអាចលុប (ទិន្នន័យ Error)';
+                    
+                    if (decisionTime) {
+                        const minutesAgo = (now.getTime() - decisionTime.getTime()) / 60000; // គណនាเวลาเป็นនាទី
+                        if (minutesAgo < 55) {
+                            canDelete = true;
+                        } else {
+                            reason = `មិនអាចលុប (លើស ${Math.round(minutesAgo)} នាទី)`;
+                        }
+                    }
+                    
+                    deleteButtonHtml = canDelete ? activeDeleteButton : disabledDeleteButton(reason);
+                    actionButtonsHtml = ''; // គ្មានប៊ូតុង Approve/Reject ទេ ព្រោះបានตัดสินใจហើយ
+                    break;
+                    
+                default:
+                    // ក្នុងករណី Status ចម្លែក
+                    deleteButtonHtml = disabledDeleteButton('Status មិនត្រឹមត្រូវ');
+                    actionButtonsHtml = '';
                     break;
             }
 
-            // [NEW] Use helper function to get inner HTML
-            const detailHtml = getRequestDetailHtml(request, deleteButton); 
+            // --- បង្កើត Card HTML ---
+            const detailHtml = getRequestDetailHtml(request, deleteButtonHtml); 
 
             return `
                 <div class="card-bg border border-primary rounded-lg shadow-md p-4 mb-4 break-inside-avoid hover:shadow-lg transition-shadow duration-200">
                     ${detailHtml}
-                    ${actionButtons}
+                    ${actionButtonsHtml}
                 </div>`;
         }
         
