--- a/index.html
+++ b/index.html
@@ -1,54 +1,4 @@
-<!DOCTYPE html>
-<html lang="km" class="">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - កម្មវិធី​សុំ​ច្បាប់</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="shortcut icon" href="https://img.icons8.com/fluency/48/goodnotes--v1.png" type="image/x-icon">
-
-    <link rel="stylesheet" href="style.css">
-
-    <script type="module" src="app.js"></script>
-
-</head>
-<body class="bg-secondary">
-    
-    <div id="body-bg-image" class="hidden"></div>
-
-    <div class="max-w-md mx-auto min-h-screen bg-primary shadow-lg flex flex-col">
-
-        <header class="bg-header text-header p-4 shadow-md sticky top-0 z-10">
-            <h1 class="text-xl font-bold text-center">Admin - គ្រប់គ្រង​សំណើ</h1>
-        </header>
-
-        <main id="main-content-area" class="flex-grow overflow-y-auto p-4 bg-secondary">
-            <div id="loading-indicator" class="text-center py-16">
-                <div class="spinner inline-block w-8 h-8"></div>
-                <p class="text-secondary mt-3 text-sm">កំពុង​ទាញ​យក​សំណើ...</p>
-            </div>
-
-            <div id="error-display" class="hidden bg-red-100 border border-red-300 text-red-800 p-4 rounded-lg text-sm mx-2 my-4">
-                </div>
-
-            <div id="empty-placeholder" class="hidden text-center py-16">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mx-auto text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
-                </svg>
-                <p class="mt-4 text-lg font-semibold text-secondary">មិន​មាន​សំណើ​សម្រាប់​បង្ហាញ</p>
-                <p class="text-sm text-gray-400 mt-1">នៅ​ពេល​មាន​សំណើ​ថ្មី វា​នឹង​បង្ហាញ​នៅ​ទីនេះ។</p>
-            </div>
-
-            <div id="request-list" class="">
-                </div>
-        </main>
-
-        <div id="settings-page" class="flex-grow overflow-y-auto p-4 bg-secondary hidden">
+<div id="settings-page" class="flex-grow overflow-y-auto p-4 bg-secondary hidden">
             <h2 class="text-lg font-semibold text-primary mb-4 border-b border-primary pb-2">ការកំណត់ (Settings)</h2>
             
             <div class="space-y-5">
@@ -58,7 +8,19 @@
                         <i class="fas fa-filter text-secondary w-5 text-center"></i>
                         <h3 class="font-medium text-primary text-lg">ការកំណត់ Filter ទូទៅ</h3>
                     </div>
+
                     <div class="flex items-center justify-between">
+                        <div>
+                            <label for="toggle-today-filter" class="font-medium text-primary">ត្រងយកតែថ្ងៃបច្ចុប្បន្ន</label>
+                            <p class="text-xs text-secondary">បង្ហាញតែសំណើសម្រាប់ថ្ងៃនេះ គ្រប់ Page។</p>
+                        </div>
+                        <div class="relative inline-block w-12 h-7 align-middle select-none">
+                            <input type="checkbox" name="toggle-today-filter" id="toggle-today-filter" class="toggle-checkbox"/>
+                            <label for="toggle-today-filter" class="toggle-label"><span class="toggle-dot"></span></label>
+                        </div>
+                    </div>
+
+                    <div class="flex items-center justify-between pt-4 border-t border-secondary">
                         <div>
                             <label for="toggle-month-filter" class="font-medium text-primary">ត្រងយកតែខែបច្ចុប្បន្ន</label>
                             <p class="text-xs text-secondary">បង្ហាញតែសំណើក្នុងខែនេះ គ្រប់ Page។</p>
@@ -153,60 +115,3 @@
             </div>
 
         </div>
-
-        <nav id="footer-nav" class="sticky bottom-0 w-full bg-primary border-t border-primary shadow-lg z-20">
-            <div class="max-w-md mx-auto flex justify-around items-center h-16">
-                <button data-filter="pending" class="filter-nav-btn flex-1 flex justify-center items-center h-full text-center text-secondary hover:text-primary transition-colors duration-150">
-                    <i class="fas fa-hourglass-half fa-lg"></i>
-                </button>
-                <button data-filter="approved" class="filter-nav-btn flex-1 flex justify-center items-center h-full text-center text-secondary hover:text-primary transition-colors duration-150">
-                    <i class="fas fa-check-circle fa-lg"></i>
-                </button>
-                <button data-filter="rejected" class="filter-nav-btn flex-1 flex justify-center items-center h-full text-center text-secondary hover:text-primary transition-colors duration-150">
-                    <i class="fas fa-times-circle fa-lg"></i>
-                </button>
-                <button data-filter="all" class="filter-nav-btn flex-1 flex justify-center items-center h-full text-center text-secondary hover:text-primary transition-colors duration-150">
-                    <i class="fas fa-grip-horizontal fa-lg"></i>
-                </button>
-                <button data-filter="settings" class="filter-nav-btn flex-1 flex justify-center items-center h-full text-center text-secondary hover:text-primary transition-colors duration-150">
-                    <i class="fas fa-cog fa-lg"></i>
-                </button>
-            </div>
-        </nav>
-
-    </div> <div id="custom-alert-modal" class="fixed inset-0 z-[60] flex items-center justify-center bg-black bg-opacity-50 hidden p-4">
-        <div class="card-bg p-6 rounded-lg shadow-xl w-full max-w-sm text-center">
-            <svg id="custom-alert-icon-warning" xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto text-red-500 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /> </svg>
-            <svg id="custom-alert-icon-success" xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto text-green-500 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"> <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /> </svg>
-            <h3 id="custom-alert-title" class="text-xl font-bold mt-4 mb-2 text-primary">...</h3>
-            <p id="custom-alert-message" class="text-secondary mb-6 whitespace-pre-line text-sm">...</p>
-            <div class="flex justify-center"> <button id="custom-alert-ok-btn" class="bg-blue-600 text-white py-2 px-8 rounded-lg font-semibold shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"> យល់ព្រម </button> </div>
-        </div>
-    </div>
-
-    <div id="confirmation-modal" class="fixed inset-0 z-[70] flex items-center justify-center bg-black bg-opacity-75 hidden p-4">
-        <div class="card-bg p-6 rounded-lg shadow-xl w-full max-w-sm text-center">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <h3 id="confirmation-title" class="text-xl font-bold mt-4 mb-2 text-primary">សួរបញ្ជាក់</h3>
-            <p id="confirmation-message" class="text-secondary mb-6 text-sm whitespace-pre-line">...</p>
-            <div class="flex justify-center gap-4">
-                <button id="confirm-no-btn" class="bg-gray-200 text-gray-800 dark:bg-gray-600 dark:text-gray-100 py-2 px-6 rounded-lg font-semibold hover:bg-gray-300 dark:hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2"> បោះបង់ </button>
-                <button id="confirm-yes-btn" data-id="" data-type="" data-action="" class="text-white py-2 px-6 rounded-lg font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2"> យល់ព្រម </button>
-            </div>
-        </div>
-    </div>
-
-    <div id="request-detail-modal" class="fixed inset-0 z-[65] flex items-center justify-center bg-black bg-opacity-60 hidden p-4">
-        <div class="card-bg p-4 rounded-lg shadow-xl w-full max-w-md relative max-h-[80vh] overflow-y-auto">
-            <button id="detail-modal-close-btn" class="absolute top-2 right-2 text-secondary hover:text-primary bg-secondary dark:bg-gray-700 dark:hover:bg-gray-600 rounded-full w-7 h-7 flex items-center justify-center">
-                <i class="fas fa-times"></i>
-            </button>
-            <div id="detail-modal-content" class="mt-6">
-                </div>
-        </div>
-    </div>
-
-</body>
-</html>
